Fixing scroll issue on iOS

--- a/src/css/sass/index.scss
+++ b/src/css/sass/index.scss
@@ -17,6 +17,7 @@
 
 html {
   height: 100vh;
+  overflow: hidden;
 }
 
 body {
